authorize the authorities